<resources>
    <string name="alert_error_title" translatable="false">Error</string>
    <string name="alert_ok_button" translatable="false">OK</string>
    <string name="error_failed_to_connect_to_device" formatted="false" translatable="false">Failed to connect to device {%s}Reason: %s</string>
    <string name="scan_start" translatable="false">Start</string>
    <string name="scan_stop" translatable="false">Stop</string>
    <string name="companion_license" translatable="false">ENTER_LISENCE_HERE</string>
    <string name="interval" translatable="false">Interval</string>
    <string name="set_interval" translatable="false">Ορίστε ρυθμό ανανέωσης δεδομένων:</string>
    <string name="set_interval_subtitle" translatable="false">(30 – 3600 δευτερόλεπτα)</string>
    <string name="set_interval_hint" translatable="false">Χρόνος σε δευτερόλπετα</string>
    <string name="seconds" translatable="false">δευτερόλεπτα</string>
    <string name="config_female" translatable="false">Female</string>
    <string name="config_male" translatable="false">Male</string>
    <string name="config_gender" translatable="false">Gender</string>
    <string name="config_height" translatable="false">Height (m)</string>
    <string name="config_weight" translatable="false">Weight (kg)</string>
    <string name="config_age" translatable="false">Age (y)</string>
    <string name="config_menu_done" translatable="false">Done</string>
    <string name="config_menu_disable_archive" translatable="false">Disable fit archive</string>
    <string name="config_menu_enable_archive" translatable="false">Enable fit archive</string>
    <string name="config_empty_field_error" translatable="false">All fields should be filled with positive values.</string>
    <string name="pair_success_button" translatable="false">Done</string>
    <string name="pair_screen_device_disconnected" translatable="false">Η συσκευή %s αποσυνδέθηκε.</string>
    <string name="pair_screen_device_connection_failed" translatable="false">Η συσκευή %s δεν έχει συνδεθεί.</string>
    <string name="pair_screen_device_pairing_failed" translatable="false">Η σύνδεση συσκευής απέτυχε.</string>
    <string name="action_bar_connected_devs" translatable="false">Συνδεδεμένες συσκευές</string>
    <string name="action_bar_scanning" translatable="false">Αναζήτηση..</string>
    <string name="action_bar_config" translatable="false">Configuration</string>
    <string name="action_bar_pair" translatable="false">Σύνδεση συσκευών</string>
    <string name="action_bar_add_goal" translatable="false">Add goal</string>
    <string name="pair_enter_pass_key" translatable="false">Enter passkey</string>
    <string name="connected_forget_device_message" translatable="false">Θέλετε να διαγράψετε αυτή τη συσκευή?</string>
    <string name="no_internet_connection" translatable="false">Δεν υπάρχει σύνδεση στο διαδίκτυο.</string>
    <string name="alert_dialog_ok" translatable="false">Οκ</string>
    <string name="alert_dialog_cancel" translatable="false">Άκυρο</string>
    <string name="scan_devices_title" translatable="false">Συνδέστε μια συσκευή</string>
    <string name="scan_devices_msg" translatable="false">Δεν βρέθηκαν συνδεδεμένες συσκευές. Θέλετε να συνδέσετε μια νέα συσκευή;</string>
    <string name="set" translatable="false">Επιβεβαιωση</string>
    <string name="cancel" translatable="false">Ακυρο</string>
    <string name="button_keep" translatable="false">Keep</string>
    <string name="button_delete" translatable="false">Delete</string>
    <string name="sync_dialog_results" translatable="false">Sync results</string>
    <string name="date_format_day_month" translatable="false">DD-MM</string>
    <string name="date_format_month_day" translatable="false">MM-DD</string>
    <string name="time_format_twelve_hour" translatable="false">12h</string>
    <string name="time_format_twenty_four_hour" translatable="false">24h</string>
    <string name="time_format" translatable="false">Time Format</string>
    <string name="date_format" translatable="false">Date Format</string>
    <string name="config_language" translatable="false">Language</string>
    <string name="display_orientation" translatable="false">Orientation</string>
    <string name="display_orientation_landscape" translatable="false">Landscape</string>
    <string name="display_orientation_portrait" translatable="false">Portrait</string>
    <string name="display_orientation_landscape_flipped" translatable="false">Landscape flipped</string>
    <string name="display_orientation_portrait_flipped" translatable="false">Portrait flipped</string>
    <string name="display_screen_steps" translatable="false">Steps</string>
    <string name="display_screen_steps_goal" translatable="false">Steps goal</string>
    <string name="display_screen_distance" translatable="false">Distance</string>
    <string name="display_screen_calories" translatable="false">Calories</string>
    <string name="display_screen_time" translatable="false">Time</string>
    <string name="display_screen_date" translatable="false">Date</string>
    <string name="display_screen_heart_rate" translatable="false">Heart rate</string>
    <string name="display_screen_intensity_minutes" translatable="false">Intensity minutes</string>
    <string name="display_screen_floors_climbed" translatable="false">Floors climbed</string>
    <string name="display_screen_timer" translatable="false">Timer</string>
    <string name="display_screen_notifications" translatable="false">Notifications</string>
    <string name="unit_settings" translatable="false">Unit settings</string>
    <string name="screen_settings" translatable="false">Screen settings</string>
    <string name="display_screens" translatable="false">Display screens</string>
    <string name="data_sources" translatable="false">Data Sources</string>
    <string name="custom_apps" translatable="false">Custom Apps</string>
    <string name="watch_faces" translatable="false">Watch Faces</string>
    <string name="auto_activity" translatable="false">Auto activity</string>
    <string name="move_alert" translatable="false">Move Alert</string>
    <string name="heart_rate" translatable="false">Heart rate</string>
    <string name="custom_stride_length" translatable="false">Custom Stride Length</string>
    <string name="walking" translatable="false">Walking (m)</string>
    <string name="running" translatable="false">Running (m)</string>
    <string name="goals" translatable="false">Custom Goals</string>
    <string name="goal_value" translatable="false">Goal value</string>
    <string name="custom_stride_unit" translatable="false">m</string>
    <string name="user_settings" translatable="false">User settings</string>
    <string name="initial_screen" translatable="false">Initial screen</string>
    <string name="auto_upload" translatable="false">Auto upload</string>
    <string name="sync_frequency" translatable="false">Sync frequency</string>
    <string name="backlight_mode" translatable="false">Backlight mode</string>
    <string name="screen_mode" translatable="false">Screen mode</string>
    <string name="custom_stride_step_length" translatable="false">Step length</string>
    <string name="notification" translatable="false">Notification</string>
    <string name="custom_logging" translatable="false">Custom Logging</string>
    <string name="message" translatable="false">Message</string>
    <string name="title" translatable="false">Title</string>
    <string name="send" translatable="false">Send</string>
    <string name="clear" translatable="false">Clear</string>
    <string name="goal_steps" translatable="false">Steps</string>
    <string name="goal_intensity" translatable="false">Intensity minutes</string>
    <string name="goal_floors_climbed" translatable="false">Floors climbed</string>
    <string name="add_goal_existent_goal" translatable="false">Goal already added.</string>
    <string name="unit_system" translatable="false">Unit measurement system</string>
    <string name="unit_system_statute" translatable="false">Statute</string>
    <string name="unit_system_metric" translatable="false">Metric</string>
    <string name="init_failed_title" translatable="false">SDK initialization failed.</string>
    <string name="init_failed_message" translatable="false">Garmin Health SDK failed to initialize. Check your license.</string>
    <string name="init_failed_generic_message" translatable="false">Garmin Health SDK failed to initialize because of unexpected exception.</string>
    <string name="hr_description" translatable="false">Heart Rate Chart</string>
    <string name="stress_description" translatable="false">Stress Level Chart</string>
    <string name="steps_description" translatable="false">Steps Chart</string>
    <string name="calories_description" translatable="false">Calories Chart</string>
    <string name="floors_description" translatable="false">Floors Chart</string>
    <string name="intensity_minutes_description" translatable="false">Intensity Minutes Chart</string>
    <string name="hrv_description" translatable="false">Heart Rate Variability Chart</string>
    <string name="refresh_charts" translatable="false">Refresh Charts</string>
    <string name="accelerometer_description" translatable="false">Accelerometer Chart</string>
    <string name="spo2_description" translatable="false">SPO2 Chart</string>
    <string name="respiration_description" translatable="false">Respiration Chart</string>
    <string name="body_battery_description" translatable="false">Body Battery Chart</string>
    <string name="register_from_login" translatable="false">ΔΗΜΙΟΥΡΓΙΑ</string>
    <string name="login" translatable="false">ΣΥΝΔΕΣΗ</string>
    <string name="login_title" translatable="false">Σύνδεση στην εφαρμογή</string>
    <string name="register_title" translatable="false">Δημιουργία λογαριασμού</string>
    <string name="register_pass_header" translatable="false">Εισάγετε ένα κωδικό πρόσβασης που θα θυμάστε εύκολα (τουλάχιστον 6 χαρακτήρες, 1 πεζό γράμμα  και 1 αριθμό):</string>
    <string name="register_email_header" translatable="false">Εισάγετε την ηλεκτρονική σας διεύθυνση:</string>
    <string name="register_next_step" translatable="false">ΕΠΟΜΕΝΟ ΒΗΜΑ</string>
    <string name="e_mail" translatable="false">Email:</string>
    <string name="password" translatable="false">Κωδικός πρόσβασης</string>
    <string name="forgot_password" translatable="false">Ξέχασα τον κωδικό μου</string>
    <string name="already_account" translatable="false">Έχω ήδη λογαριασμό, </string>
    <string name="no_account" translatable="false">Δεν έχω λογαριασμό, </string>
    <string name="add_contact" translatable="false">ΠΡΟΣΘΗΚΗ ΕΠΑΦΗΣ</string>
    <string name="menu_metriseis" translatable="false">ΜΕΤΡΗΣΕΙΣ</string>
    <string name="menu_simvoules" translatable="false">ΣΥΜΒΟΥΛΕΣ</string>
    <string name="menu_minimata" translatable="false">ΜΗΝΥΜΑΤΑ</string>
    <string name="menu_epafes" translatable="false">ΕΠΑΦΕΣ</string>
    <string name="no_contacts" translatable="false">Δεν υπάρχουν επαφές.</string>
    <string name="contacts" translatable="false">Επαφές</string>
    <string name="contacts_subtitle" translatable="false">Τα παρακάτω άτομα έχουν πρόσβαση στα αποτελέσματα των μετρήσεων σας.</string>
    <string name="help_dialog_title">ΟΔΗΓΙΕΣ ΦΩΝΗΤΙΚΩΝ ΕΝΤΟΛΩΝ</string>
    <string name="help_dialog_content2">Βήμα 2: Στην συνέχεια πείτε καθαρά την μέτρηση που θέλετε να ακούσετε (πχ. "Οξυγόνο")</string>
    <string name="help_dialog_content3">Βήμα 3: Αμέσως μετά κλείστε το ΜΙΚΡΟΦΩΝΟ πατώντας το κουμπί </string>
    <string name="help_dialog_content4">Βήμα 4: Περιμένετε την απάντηση του βοηθού</string>
    <string name="help_dialog_content5_title">Λέξεις που καταλαβαίνω</string>
    <string name="help_dialog_content5">"Παλμοί", "Παλμούς"\n"Οξυγόνο", "Κορεσμός"\n"Βήχας"\n"Πίεση"\n"Στρές", "Άγχος"\n"Σάκχαρο", "Ζάχαρο"\n"Μετρήσεις ημέρας"\n"Μηνύματα"</string>
</resources>