<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/chart_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        app:showAsAction="always"
        android:title="@string/refresh_charts" />
    <item android:id="@+id/show_hr_chart"
        android:title="@string/hr_description"
        app:showAsAction="never|withText"
        android:checkable="true"
        android:checked="true"/>
    <item android:id="@+id/show_hrv_chart"
        android:title="@string/hrv_description"
        app:showAsAction="never|withText"
        android:checkable="true"
        android:checked="true"/>
    <item android:id="@+id/show_steps_chart"
        android:title="@string/steps_description"
        app:showAsAction="never|withText"
        android:checkable="true"
        android:checked="true"/>
    <item android:id="@+id/show_calories_chart"
        android:title="@string/calories_description"
        app:showAsAction="never|withText"
        android:checkable="true"
        android:checked="true"/>
    <item android:id="@+id/show_floors_chart"
        android:title="@string/floors_description"
        app:showAsAction="never|withText"
        android:checkable="true"
        android:checked="true"/>
    <item android:id="@+id/show_intensity_minutes_chart"
        android:title="@string/intensity_minutes_description"
        app:showAsAction="never|withText"
        android:checkable="true"
        android:checked="true"/>
    <item android:id="@+id/show_stress_chart"
        android:title="@string/stress_description"
        app:showAsAction="never|withText"
        android:checkable="true"
        android:checked="true"/>
    <item android:id="@+id/show_accelerometer_chart"
        android:title="@string/accelerometer_description"
        app:showAsAction="never|withText"
        android:checkable="true"
        android:checked="true"/>
    <item android:id="@+id/show_spo2_chart"
        android:title="@string/spo2_description"
        app:showAsAction="never|withText"
        android:checkable="true"
        android:checked="true"/>
    <item android:id="@+id/show_body_battery_chart"
        android:title="@string/body_battery_description"
        app:showAsAction="never|withText"
        android:checkable="true"
        android:checked="true"/>
    <item android:id="@+id/show_respiration_chart"
          android:title="@string/respiration_description"
          app:showAsAction="never|withText"
          android:checkable="true"
          android:checked="true"/>
</menu>