<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:background="@color/grey_text_color">

    <LinearLayout
        android:background="@color/light_grey"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:orientation="vertical"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/cancel_button"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:background="@drawable/ic_baseline_close_24"
            android:paddingStart="20dp"
            android:paddingEnd="0dp"
            android:layout_gravity="end"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_dialog_title"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:layout_marginBottom="20dp"/>
            <TextView
                android:id="@+id/content1_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_dialog_content2"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:id="@+id/content3_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_dialog_content3"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_dialog_content4"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_dialog_content5_title"
                android:textSize="16sp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="20dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/help_dialog_content5"
                android:textSize="16sp"
                android:layout_marginBottom="10dp"/>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>