<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent">

<TextView
    android:id="@+id/textView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:padding="10dp"
    android:textSize="16sp"
    android:textStyle="bold"
    android:text="@string/set_interval"
    android:layout_alignParentTop="true" />


    <TextView
        android:id="@+id/seconds_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:padding="10dp"
        android:text="@string/seconds"
        android:layout_below="@id/textView"
        android:layout_alignParentEnd="true"
        />

<EditText
    android:id="@+id/edt_comment"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:inputType="number"
    android:padding="10dp"
    android:layout_alignRight="@id/seconds_title"
    android:layout_below="@id/textView"/>


<Button
    android:id="@+id/buttonSubmit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginEnd="8dp"
    android:layout_marginTop="8dp"
    android:text="@string/set"
    android:layout_below="@id/edt_comment"
    android:layout_alignParentEnd="true"/>

<Button
    android:id="@+id/buttonCancel"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:text="@string/cancel"
    android:layout_below="@id/edt_comment"
    android:layout_alignParentStart="true"/>


</RelativeLayout>