<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/register_board1">
    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_title"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="50dp"
        android:layout_above="@id/register_email_title"
        android:layout_marginLeft="20dp" />

    <TextView
        android:id="@+id/register_email_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_email_header"
        android:textSize="15sp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:layout_above="@id/et_email"
        android:layout_marginLeft="20dp" />
    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/e_mail"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:layout_above="@id/register_pass_title"
        android:textSize="15sp"
        android:background="@drawable/et_custom"
        android:importantForAutofill="no"/>

    <TextView
        android:id="@+id/register_pass_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_pass_header"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="5dp"
        android:layout_above="@id/et_password"
        android:layout_marginLeft="20dp" />
    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:layout_centerInParent="true"
        android:textSize="15sp"
        android:background="@drawable/et_custom"/>

    <Button
        android:id="@+id/next_step"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/et_password"
        android:background="@drawable/default_button"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/white"
        android:text="@string/register_next_step"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:padding="5dp"
        android:drawableRight="@drawable/ic_baseline_chevron_right_24"
        android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
        android:drawableTint="@android:color/white"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:gravity="end">

        <TextView
            android:id="@+id/already_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_account"
            android:textSize="15sp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="15sp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/basic_color"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="20dp"
            android:drawableRight="@drawable/ic_baseline_chevron_right_24"
            android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
            android:drawableTint="@color/basic_color"
            android:gravity="center_vertical"/>
    </LinearLayout>
    <!--
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic"
            android:layout_above="@id/swipeRight"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:id="@+id/swipeRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/swipe_left_for_register"
            android:textSize="15sp"
            android:layout_centerHorizontal="true"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"/>
    -->

</RelativeLayout>