<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/login_fragment"
    android:background="?android:windowBackground"
    tools:context=".LoginFragment"
    >
    <ImageView
        android:id="@+id/header_image"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:layout_gravity="top|center"
        android:paddingHorizontal="@dimen/btn_horizontal_margin"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/logo_top" />
    <TextView
        android:id="@+id/tv_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_title"
        android:textSize="20sp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginBottom="50dp"
        android:layout_above="@id/login_email"
        android:layout_marginLeft="20dp"
        android:layout_below="@id/header_image"/>

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/e_mail"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:layout_above="@id/login_password"
        android:background="@drawable/et_custom"
        android:textSize="15sp"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="10dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:layout_centerInParent="true"
        android:background="@drawable/et_custom"
        android:textSize="15sp" />

      <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_password"
        android:background="@drawable/default_button"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="35dp"
        android:textColor="@android:color/white"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="15sp"
        android:layout_below="@id/btn_login"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:textColor="@color/basic_color"
        android:clickable="true"
        android:focusable="true"
        />

    <LinearLayout
        android:id="@+id/register_link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="30dp"
        android:gravity="end">

        <TextView
            android:id="@+id/already_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_account"
            android:textSize="15sp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginRight="5dp"
            android:layout_marginEnd="5dp" />

        <TextView
            android:id="@+id/goRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_from_login"
            android:textSize="15sp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="20dp"
            android:textColor="@color/basic_color"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginEnd="20dp"
            android:drawableRight="@drawable/ic_baseline_chevron_right_24"
            android:drawableEnd="@drawable/ic_baseline_chevron_right_24"
            android:drawableTint="@color/basic_color"
            android:gravity="center_vertical"/>
    </LinearLayout>
</RelativeLayout>