<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentContacts"
    android:layout_marginTop="10dp">

    <RelativeLayout
        android:id="@+id/contact_invitations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/border_shape"
        android:clickable="true"
        android:focusable="true">
        <TextView
            android:id="@+id/invitations_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_centerVertical="true"
            />
        <ImageView
            android:id="@+id/img_pulseox"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_baseline_chevron_right_24"
            android:layout_alignParentEnd="true"
            android:tint="@color/basic_color"/>
    </RelativeLayout>
    <TextView
        android:id="@+id/contacts_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:layout_below="@id/contact_invitations"
        />

    <TextView
        android:id="@+id/contacts_subheader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contacts_subtitle"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="15dp"
        android:layout_below="@id/contacts_header"

        />
    <Button
        android:id="@+id/btn_add_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_contact"
        android:padding="@dimen/btn_horizontal_margin"
        android:background="@drawable/default_button"
        android:textColor="@color/white"
        android:gravity="center_vertical"
        android:drawableStart="@drawable/ic_baseline_add_24"
        android:drawableTint="@color/white"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"/>
    <ListView
        android:id="@+id/contacts_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_below="@id/contacts_subheader"
        android:layout_above="@id/btn_add_contact"/>

    <TextView
        android:id="@+id/no_contacts_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingStart="20dp"
        android:layout_below="@id/contacts_subheader"
        android:text="@string/no_contacts"
        android:textSize="14sp"
        android:visibility="gone"/>

</RelativeLayout>